--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <header class="header">
         <div class="nav-container">
             <div class="logo">
-                <img src="C:\Users\deep.hirani_jadeglob\Downloads\jade_logo.png" alt="Jade Global">
+                <img src="WorkdayBlog1\jade_logo.png" alt="Jade Global">
             </div>
             <nav>
                 <ul class="nav-menu">
