--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <header class="header">
         <div class="nav-container">
             <div class="logo">
-                <img src="WorkdayBlog1\jade_logo.png" alt="Jade Global">
+                <img src="jade_logo.png" alt="Jade Global">
             </div>
             <nav>
                 <ul class="nav-menu">
@@ -388,7 +388,7 @@
                 <p>Most organizations struggle with a fundamental challenge: a lack of visibility into the true skills of their workforce and candidate pool. Job titles don't capture capability, and static role definitions fail to reflect employees' full potential. Workday Skills Cloud moves you from guesswork to skills intelligence - a dynamic, AI-driven model that understands, maps, and evolves skills data across the enterprise.</p>
 
                 <div class="diagram-container">
-                    <img src="First One.png" alt="Skills Intelligence Transformation Process" class="diagram-image">
+                    <img src="FirstOne.png" alt="Skills Intelligence Transformation Process" class="diagram-image">
                 </div>
 
                 <p>For recruiting teams, this translates into immediate, tangible advantages:</p>
@@ -437,7 +437,7 @@
                 <p>Workday Skills Cloud is an intelligent, machine learning-powered platform that builds a centralized, dynamic skills library. It automatically detects, infers, and standardizes skills from resumes, profiles, feedback, learning history, and more. This eliminates inconsistent, redundant, or vague skill entries, creating a unified and intelligent framework.</p>
 
                 <div class="diagram-container">
-                    <img src="Traditional vs Skillbased.png" alt="Traditional vs Skills-Based Hiring Comparison" class="diagram-image">
+                    <img src="TraditionalvsSkillbased.png" alt="Traditional vs Skills-Based Hiring Comparison" class="diagram-image">
                 </div>
 
                 <p>Key applications that directly benefit recruiting:</p>
@@ -452,14 +452,14 @@
                 <p>Recruiters hire based on verified skills rather than just experience or job titles, increasing objectivity and diversity in your candidate pool.</p>
 
                 <div class="diagram-container">
-                    <img src="Career Marketplace.png" alt="Career Marketplace Overview" class="diagram-image">
+                    <img src="CareerMarketplace.png" alt="Career Marketplace Overview" class="diagram-image">
                 </div>
 
                 <h3>Data Interoperability</h3>
                 <p>Skills Cloud integrates seamlessly with other systems like your Applicant Tracking System (ATS), Learning Management System (LMS), and Customer Relationship Management (CRM) tools, unifying skills data across your entire HR tech stack. This provides a holistic view of skills from recruitment to development.</p>
 
                 <div class="diagram-container">
-                    <img src="Data Intero.png" alt="Data Interoperability Integration" class="diagram-image">
+                    <img src="DataIntero.png" alt="Data Interoperability Integration" class="diagram-image">
                 </div>
 
                 <h2>Start Hiring Smarter Today: Your Actionable Steps</h2>
@@ -505,7 +505,7 @@
             </div>
             
             <div class="sidebar-section">
-                <img src="Workday SkillsCloud - Banner.png" alt="Workday Skills Cloud Banner" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                <img src="WorkdaySkillsCloudBanner.png" alt="Workday Skills Cloud Banner" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
             </div>
         </aside>
     </div>
@@ -517,5 +517,6 @@
     </footer>
 </body>
 </html>
+
 
 
