--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             
             <article class="article-content">
                 <p>It's clear that the traditional approach to talent management is evolving. In today's fiercely competitive landscape, relying solely on static job titles and conventional resume screening simply isn't enough. The true currency of talent has shifted: it's all about skills. If your organization is already leveraging Workday, it's time to unlock the next level of talent acquisition and management by strategically integrating Workday Skills Cloud.</p>
-                <p>But when your HR and recruiting teams are already stretched, the idea of adopting new platforms might seem like an additional commitment. You might wonder, "What's truly in it for us, right now?"
+                <p>But when your HR and recruiting teams are already stretched, the idea of adopting new platforms might seem like an additional commitment. You might wonder, "<strong>What's truly in it for us, right now?</strong>"
                 <br>However, embracing a skills-first strategy doesn't have to disrupt your current operations. Workday Skills Cloud is designed to streamline and enhance your talent processes, allowing your teams to focus on what matters most - building the workforce of tomorrow.</p>
                 <h2>Why Workday Skills Cloud is a Game-Changer for Recruiting Teams</h2>
                 <p>Most organizations struggle with a fundamental challenge: a lack of visibility into the true skills of their workforce and candidate pool. Job titles don't capture capability, and static role definitions fail to reflect employees' full potential. Workday Skills Cloud moves you from guesswork to skills intelligence - a dynamic, AI-driven model that understands, maps, and evolves skills data across the enterprise.</p>
@@ -518,6 +518,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
