--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 </ul>
 
                 <h2>Final Thoughts: Hire Smarter, Hire Faster</h2>
-                <p>Workday Workday Skills Cloud doesn’t just enhance recruiting - it transforms it. By shifting your strategy from job titles to skills, you unlock greater efficiency, deeper insight, and a smarter, more inclusive hiring process.Whether you're hiring for today or building the workforce of tomorrow - Skills Cloud gives your recruiting team the intelligence and agility to lead.<br><strong>Our role is to guide that journey – bridging today's challenges with tomorrow's workforce solutions.</strong></p>
+                <p>Workday Workday Skills Cloud doesn’t just enhance recruiting - it transforms it. By shifting your strategy from job titles to skills, you unlock greater efficiency, deeper insight, and a smarter, more inclusive hiring process.<br>Whether you're hiring for today or building the workforce of tomorrow - Skills Cloud gives your recruiting team the intelligence and agility to lead.<br><strong>Our role is to guide that journey – bridging today's challenges with tomorrow's workforce solutions.</strong></p>
 
                 <div class="contact-info">
                     <p>Want to learn how your recruiting team can achieve greater efficiency and attract top talent faster? Feel free to reach out to us at <a href="mailto:xcv@jade.global.com">xcv@jade.global.com</a> or visit our website <a href="https://www.jadeglobal.com" target="_blank">www.jadeglobal.com</a>.</p>
@@ -519,6 +519,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
