--- a/index.html
+++ b/index.html
@@ -509,6 +509,10 @@
             <div class="sidebar-section">
                 <img src="WorkdaySkillsCloudBanner.png" alt="Workday Skills Cloud Banner" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
             </div>
+            
+            <div class="sidebar-section">
+                <img src="SkillsCloudBenefits.jpg" alt="SkillsCloud Benefits Infographic" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+            </div>
         </aside>
     </div>
 
@@ -519,7 +523,6 @@
     </footer>
 </body>
 </html>
-
 
 
 
