--- a/index.html
+++ b/index.html
@@ -404,36 +404,40 @@
                 <h2>Real-World Impact: The Recruiter's New Workflow</h2>
                 <p>Let's illustrate the difference Workday Skills Cloud makes with a common scenario:</p>
                 
-                <p><strong>Scenario:</strong> A recruiter is trying to fill a "Data Analyst" role.</p>
+                <p><strong>Scenario:</strong>Meet Jane and Judy — both are recruiters at different tech companies, each trying to fill a Data Analyst position.</p>
 
                 <table class="comparison-table">
                     <thead>
                         <tr>
-                            <th>Without Skills Cloud</th>
-                            <th>With Skills Cloud</th>
+                            <th>Without Skills Cloud (Judy's Story)</th>
+                            <th>With Skills Cloud (Jane's Story)</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
                                 <ul>
-                                    <li>The recruiter typically searches resumes with exact job titles or specific keywords ("Data Analyst," "SQL Developer")</li>
-                                    <li>This often leads to missing highly qualified candidates who might hold different titles like "Business Intelligence Specialist" or "Operations Analyst" but possess all the necessary skills</li>
-                                    <li>The search is narrow, and the best fits might be overlooked</li>
+                                    <li>Judy begins her search by filtering resumes using exact job titles like “Data Analyst” or keywords like “SQL Developer".</li>
+                                    <li>She misses out on qualified candidates with different titles like “Operations Analyst” or “Business Intelligence Specialist". </li>
+                                    <li>Judy's search is narrow and time-consuming, filled with irrelevant profiles.</li>
+                                    <li>To fill the gap, Judy often turns to external agencies, increasing both cost and dependency.</li>
+                                    <li>Hiring takes longer, costs more, and risks missing the best talent.</li>
                                 </ul>
                             </td>
                             <td>
                                 <ul>
-                                    <li>The recruiter searches for the essential skills required: SQL, Tableau, data modeling, statistical analysis, Python, etc.</li>
-                                    <li>The system intelligently highlights candidates with these precise skills, even if their past titles were "Business Analyst," "Operations Specialist," or "Financial Modeler"</li>
-                                    <li>Results in a wider, more relevant talent pool with better-matched candidates</li>
+                                    <li>Jane uses Workday Skills Cloud to search based on actual skills like SQL, Tableau, Python, and data modeling, rather than job titles.</li>
+                                    <li>She discovers hidden talent - candidates with titles like “Financial Modeler” or “Operations Specialist” who have all the right skills.</li>
+                                    <li>Jane’s search is precise and efficient—she quickly gets a shortlist of candidates that truly fit the role.</li>
+                                    <li>She relies less on agencies because her internal sourcing is faster and more accurate.</li>
+                                    <li>Jane fills roles significantly faster, with better candidate matches and reduced hiring costs.</li>
                                 </ul>
                             </td>
                         </tr>
                     </tbody>
                 </table>
 
-                <p><strong>Result:</strong> The recruiter instantly taps into a wider, more relevant talent pool, leading to better-matched candidates and a significantly faster time-to-hire.<br> This enhanced efficiency can translate to saving dozens of recruiter hours per month and reducing hiring costs by up to <strong>15-20%</strong> by optimizing candidate sourcing and reducing reliance on external agencies.</p>
+                <p><strong>Result:</strong>While Judy struggles with missed opportunities and longer hiring cycles, Jane taps into a broader, high-quality talent pool. She makes smarter, faster hiring decisions—reducing time-to-hire and costs by up to <b>20%</b>, all thanks to <b>Workday Skills Cloud</b>.</p>
 
                 <h2>How Workday Skills Cloud Works for You</h2>
                 <p>Workday Skills Cloud is an intelligent, machine learning-powered platform that builds a centralized, dynamic skills library. It automatically detects, infers, and standardizes skills from resumes, profiles, feedback, learning history, and more. This eliminates inconsistent, redundant, or vague skill entries, creating a unified and intelligent framework.</p>
@@ -467,11 +471,11 @@
                 <h2>Start Hiring Smarter Today: Your Actionable Steps</h2>
                 <p>Ready to elevate your recruiting strategy and achieve quantifiable benefits? Here's how you can start leveraging Workday Skills Cloud today:</p>
                 <ul>
-                    <li>Enable Skills Cloud in your Workday tenant.</li>
-                    <li>Review and update your existing job profiles to reflect required skills rather than just responsibilities or qualifications.</li>
-                    <li>Encourage your recruiters to search by skill instead of relying solely on job titles for candidate sourcing.</li>
-                    <li>Ask employees to validate and update their skill profiles within Workday to ensure data accuracy and completeness.</li>
-                    <li>Integrate Skills Cloud with your Learning Management System (LMS) to personalize learning suggestions based on identified skill gaps.</li>
+                    <li><strong>Activate Skills Cloud : </strong>Enable Skills Cloud in your Workday tenant.</li>
+                    <li><strong>Update Job Profiles : </strong>Review and update your existing job profiles to reflect required skills rather than just responsibilities or qualifications.</li>
+                    <li><strong>Search by Skills : </strong>Encourage your recruiters to search by skill instead of relying solely on job titles for candidate sourcing.</li>
+                    <li><strong>Validate Employee Profiles : </strong>Ask employees to validate and update their skill profiles within Workday to ensure data accuracy and completeness.</li>
+                    <li><strong>Integrate LMS Systems : </strong>Integrate Skills Cloud with your Learning Management System (LMS) to personalize learning suggestions based on identified skill gaps.</li>
                 </ul>
 
                 <h2>Final Thoughts: Hire Smarter, Hire Faster</h2>
@@ -523,6 +527,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
