--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                     </tbody>
                 </table>
 
-                <p><strong>Result:</strong>While Judy struggles with missed opportunities and longer hiring cycles, Jane taps into a broader, high-quality talent pool. She makes smarter, faster hiring decisions—reducing time-to-hire and costs by up to <b>20%</b>, all thanks to <b>Workday Skills Cloud</b>.</p>
+                <p><strong>Result:</strong>While Judy struggles with missed opportunities and longer hiring cycles, Jane taps into a broader, high-quality talent pool. She makes smarter, faster hiring decisions - reducing time-to-hire and costs by up to <b>20%</b>, all thanks to <b>Workday Skills Cloud</b>.</p>
 
                 <h2>How Workday Skills Cloud Works for You</h2>
                 <p>Workday Skills Cloud is an intelligent, machine learning-powered platform that builds a centralized, dynamic skills library. It automatically detects, infers, and standardizes skills from resumes, profiles, feedback, learning history, and more. This eliminates inconsistent, redundant, or vague skill entries, creating a unified and intelligent framework.</p>
@@ -527,6 +527,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
