--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 <h2>Real-World Impact: The Recruiter's New Workflow</h2>
                 <p>Let's illustrate the difference Workday Skills Cloud makes with a common scenario:</p>
                 
-                <p><strong>Scenario:</strong>Meet Jane and Judy — both are recruiters at different tech companies, each trying to fill a Data Analyst position.</p>
+                <p><strong>Scenario:</strong> Meet Jane and Judy - both are recruiters at different tech companies, each trying to fill a Data Analyst position.</p>
 
                 <table class="comparison-table">
                     <thead>
@@ -440,7 +440,15 @@
                 <p><strong>Result:</strong>While Judy struggles with missed opportunities and longer hiring cycles, Jane taps into a broader, high-quality talent pool. She makes smarter, faster hiring decisions - reducing time-to-hire and costs by up to <b>20%</b>, all thanks to <b>Workday Skills Cloud</b>.</p>
 
                 <h2>How Workday Skills Cloud Works for You</h2>
-                <p>Workday Skills Cloud is an intelligent, machine learning-powered platform that builds a centralized, dynamic skills library. It automatically detects, infers, and standardizes skills from resumes, profiles, feedback, learning history, and more. This eliminates inconsistent, redundant, or vague skill entries, creating a unified and intelligent framework.</p>
+                <p>Imagine having a smart assistant that knows exactly what skills your people have - without anyone needing to enter them manually. That’s what Workday Skills Cloud does!</p><br>
+                <p>It uses machine learning to automatically scan resumes, profiles, feedback, learning history, and more - picking up skills and organizing them into one clean, consistent, and dynamic skills library.</p>
+                <ul>
+                    <li> No more repeated or vague skill entries.</li>
+                    <li>No more guessing what someone’s capable of.</li>
+                    <li>Just a clear, up-to-date view of the talent across your organization.</li>
+                </ul>
+                <br>
+                <p>It connects the dots for you - so you can make smarter hiring, development, and workforce planning decisions with confidence.</p>
 
                 <div class="diagram-container">
                     <img src="TraditionalvsSkillbased.png" alt="Traditional vs Skills-Based Hiring Comparison" class="diagram-image">
@@ -527,6 +535,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
