--- a/index.html
+++ b/index.html
@@ -447,8 +447,7 @@
                     <li>No more guessing what someone’s capable of.</li>
                     <li>Just a clear, up-to-date view of the talent across your organization.</li>
                 </ul>
-                <br>
-                <p>It connects the dots for you - so you can make smarter hiring, development, and workforce planning decisions with confidence.</p>
+                <p>It connects the dots for you - so you can make smarter hiring, development, and workforce planning decisions with confidence.</p><br>
 
                 <div class="diagram-container">
                     <img src="TraditionalvsSkillbased.png" alt="Traditional vs Skills-Based Hiring Comparison" class="diagram-image">
@@ -535,6 +534,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
