--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
                 <p><strong>Result:</strong>While Judy struggles with missed opportunities and longer hiring cycles, Jane taps into a broader, high-quality talent pool. She makes smarter, faster hiring decisions - reducing time-to-hire and costs by up to <b>20%</b>, all thanks to <b>Workday Skills Cloud</b>.</p>
 
                 <h2>How Workday Skills Cloud Works for You</h2>
-                <p>Imagine having a smart assistant that knows exactly what skills your people have - without anyone needing to enter them manually. That’s what Workday Skills Cloud does!</p><br>
-                <p>It uses machine learning to automatically scan resumes, profiles, feedback, learning history, and more - picking up skills and organizing them into one clean, consistent, and dynamic skills library.</p>
+                <p>Imagine having a smart assistant that knows exactly what skills your people have - without anyone needing to enter them manually. That’s what Workday Skills Cloud does!</p>
+                <p>    It uses machine learning to automatically scan resumes, profiles, feedback, learning history, and more - picking up skills and organizing them into one clean, consistent, and dynamic skills library.</p>
                 <ul>
                     <li> No more repeated or vague skill entries.</li>
                     <li>No more guessing what someone’s capable of.</li>
@@ -534,6 +534,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
