--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
                 <h2>How Workday Skills Cloud Works for You</h2>
                 <p>Imagine having a smart assistant that knows exactly what skills your people have - without anyone needing to enter them manually. That’s what Workday Skills Cloud does!</p>
-                <p>    It uses machine learning to automatically scan resumes, profiles, feedback, learning history, and more - picking up skills and organizing them into one clean, consistent, and dynamic skills library.</p>
+                <br><p>It uses machine learning to automatically scan resumes, profiles, feedback, learning history, and more - picking up skills and organizing them into one clean, consistent, and dynamic skills library.</p>
                 <ul>
                     <li> No more repeated or vague skill entries.</li>
                     <li>No more guessing what someone’s capable of.</li>
@@ -534,6 +534,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
