--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                     <img src="TraditionalvsSkillbased.png" alt="Traditional vs Skills-Based Hiring Comparison" class="diagram-image">
                 </div>
                 <br>
-                <p>Key applications that directly benefit recruiting:</p>
+                <p><strong>Key applications that directly benefit recruiting:</strong></p>
 
                 <h3>Skill Inference & Normalization</h3>
                 <p>Workday automatically detects, infers, and standardizes skills from various sources, ensuring clean and accurate data for your searches.</p>
@@ -534,6 +534,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
