--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <td>
                                 <ul>
                                     <li>Judy begins her search by filtering resumes using exact job titles like “Data Analyst” or keywords like “SQL Developer".</li>
-                                    <li>She misses out on qualified candidates with different titles like “Operations Analyst” or “Business Intelligence Specialist". </li>
+                                    <li>Judy misses out on qualified candidates with different titles like “Operations Analyst” or “Business Intelligence Specialist". </li>
                                     <li>Judy's search is narrow and time-consuming, filled with irrelevant profiles.</li>
                                     <li>To fill the gap, Judy often turns to external agencies, increasing both cost and dependency.</li>
                                     <li>Hiring takes longer, costs more, and risks missing the best talent.</li>
@@ -427,9 +427,9 @@
                             <td>
                                 <ul>
                                     <li>Jane uses Workday Skills Cloud to search based on actual skills like SQL, Tableau, Python, and data modeling, rather than job titles.</li>
-                                    <li>She discovers hidden talent - candidates with titles like “Financial Modeler” or “Operations Specialist” who have all the right skills.</li>
+                                    <li>Jane discovers hidden talent - candidates with titles like “Financial Modeler” or “Operations Specialist” who have all the right skills.</li>
                                     <li>Jane’s search is precise and efficient—she quickly gets a shortlist of candidates that truly fit the role.</li>
-                                    <li>She relies less on agencies because her internal sourcing is faster and more accurate.</li>
+                                    <li>Jane relies less on agencies because her internal sourcing is faster and more accurate.</li>
                                     <li>Jane fills roles significantly faster, with better candidate matches and reduced hiring costs.</li>
                                 </ul>
                             </td>
@@ -534,6 +534,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
