--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             </div>
             
             <div class="sidebar-section">
-                <img src="SkillsCloudBanner2.jpg" alt="SkillsCloud Benefits Infographic" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                <img src="SkillsCloudBanner2.png.png" alt="SkillsCloud Benefits Infographic" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
             </div>
         </aside>
     </div>
@@ -534,6 +534,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
